--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+    
+    </head>
 
 <body>
     <div class="container-fluid">  
-      </div>
-         <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
-    
+    </div>
+    <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
+    <div class="input-group">
+        <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+        <button type="button" class="btn btn-outline-secondary">Search Title</button>  
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
