--- a/result.html
+++ b/result.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href ="https://code.jquery.com/jquery-3.7.1.js">
         <link rel = "stylesheet" href="assets/css/style.css">
     </head>
 
@@ -14,6 +15,7 @@
     <div class="container-fluid">
       </div>
       <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
