Was testing code for potential use. Will update

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
     <div class="container-fluid">  
     <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
-    <div class="input-group">
-        <input type="text" class="form-control" id = "search-form" aria-label="Text input with segmented dropdown button">
+        <input type="text" class="form-control" id = "search-form" aria-label="Enter Movie Tile:">
         <button type="button" class="btn btn-outline-secondary">Search Title</button> 
     </div>
 </div>
