--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href ="https://code.jquery.com/jquery-3.7.1.js">
-        <link rel = "stylesheet" href="assets/css/style.css">
-    </head>
+    <link href="https://code.jquery.com/jquery-3.7.1.js">
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
 <body>
-    <div class="container-fluid">  
-    <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
-        <input type="text" class="form-control" id = "search-form" aria-label="Enter Movie Tile:">
-        <button type="button" class="btn btn-outline-secondary">Search Title</button> 
+    <div class="container-fluid">
+        <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
+        <div>
+            <input type="text" class="form-control" id="search-form" aria-label="Enter Movie Tile:">
+            <button type="button" class="btn btn-outline-secondary">Search Title</button>
+        </div>
     </div>
-</div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-<script src = "assets/js/script.js"></script>
+<script src="assets/js/script.js"></script>
+
 </html>
