--- a/result.html
+++ b/result.html
@@ -14,11 +14,11 @@
     <div class="container">
       </div>
       <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
-      <div class ="text-dark">
+      <div class ="text-light">
         <h2>Showing Results For:<span id="result-text"></span></h2>
         <div id="search-form"></div>
       </div>
-    <a href="./index.html" class= "btn btn-block btn-danger">&larr; Home</a>
+      <button><a href="./index.html" class= "Home">Home</a></button>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
