Trouble-shooted some code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="assets/suz-bgimage.avif" class="container-fluid" alt="background">
         <div>
             <input type="text" class="form-control" id="search-form" aria-label="Enter Movie Tile:">
-            <button type="button" class="btn btn-outline-secondary">Search Title</button>
+            <button type="button" class="btn btn-outline-secondary">Search</button>
         </div>
     </div>
     </div>
