--- a/result.html
+++ b/result.html
@@ -11,11 +11,13 @@
         <link rel = "stylesheet" href="assets/css/style.css">
     </head>
 <body>
-    <div class="container">
-      </div>
+    <div class="container"></div>
       <div class ="text-light">
         <h2>Showing Results For:<span id="result-text"></span></h2>
         <div id="search-form"></div>
+      </div>
+      <div class ="card" style="max-width: 70rem;">
+        <div class ="card-body"></div>
       </div>
       <button><a href="./index.html" class= "Home">Home</a></button>
 </body>
