--- a/result.html
+++ b/result.html
@@ -14,9 +14,8 @@
     <div class="container"></div>
       <div class ="text-light">
         <h2>Showing Results For:<span id="result-text"></span></h2>
-        <div id="search-form"></div>
       </div>
-      <div class ="card" style="max-width: 70rem;">
+      <div class ="card" style="max-width: 70rem;" id="search-form">
         <div class ="card-body"></div>
       </div>
       <button><a href="./index.html" class= "Home">Home</a></button>
