--- a/result.html
+++ b/result.html
@@ -15,8 +15,8 @@
       <div class ="text-light">
         <h2>Showing Results For:<span id="result-text"></span></h2>
       </div>
-      <div class ="card" style="max-width: 70rem;" id="search-form">
-        <div class ="card-body"></div>
+      <div class ="card" style="max-width: 70rem;">
+        <div class ="card-body" id="search-form"></div>
       </div>
       <button><a href="./index.html" class= "Home">Home</a></button>
 </body>
